--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,9 @@ input {
   background-color: var(--light);
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 }
+.custom-close-button {
+  font-size: 12px;
+}
 
 @media (min-width: 660px) {
   .menu {
@@ -81,6 +84,10 @@ input {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 1.5rem;
+}
+
+.container {
+  text-align: -webkit-center;
 }
 
 .logo img {
