--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #ffffff;
-  --secondary: #ffffff;
-  --light: #ffffff;
+  --secondary: #532827;
+  --light: #a37443;
 }
 
 html {
@@ -20,15 +20,15 @@ html {
 }
 
 body {
-  color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
+  color: #532827;
+  background-color: #f4e3d1;
   padding: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 @media screen and (max-width: 600px) {
   body {
-    background-color: #000000;
+    background-color: #f4e3d1;
   }
 }
 
@@ -42,13 +42,17 @@ input {
   border-radius: 50%;
   text-align: center;
 }
+.BackButton {
+  width: 100%;
+  text-align: center;
+}
 
 /* Home */
 .centered-buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 29px;
+  margin-top: 57px;
 }
 
 .button {
@@ -57,15 +61,15 @@ input {
   padding: 10px 20px;
   font-size: 16px;
   text-decoration: none;
-  color: #ffffff;
-  background-color: #000000;
+  color: white;
+  background-color: #a37443;
   border: 1px solid white;
   border-radius: 12px;
   cursor: pointer;
 }
 
 .button:hover {
-  background-color: #3c3c3c;
+  background-color: #532827;
 }
 @media screen and (max-width: 600px) {
   .button {
@@ -74,15 +78,14 @@ input {
     padding: 10px 20px;
     font-size: 16px;
     text-decoration: none;
-    color: #ffffff;
-    background-color: #000000;
-    border: 1px solid white;
+    color: white;
+    background-color: #a37443;
     border-radius: 9px;
     cursor: pointer;
   }
 
   .button:hover {
-    background-color: #3c3c3c;
+    background-color: #532827;
   }
 }
 /* Home */
@@ -94,7 +97,7 @@ input {
   font-size: 16px;
   text-decoration: none;
   color: #ffffff;
-  background-color: #000000;
+  background-color: #a37443;
   border: 1px solid white;
   border-radius: 12px;
   cursor: pointer;
@@ -107,17 +110,20 @@ input {
 .ver-imagem-button {
   margin-top: 0.5rem;
   padding: 0.5rem 0.1rem;
-  background-color: #4a4a4a;
-  color: #fff;
-  border: none;
+  background-color: #a37443;
+  color: white;
+  font-weight: 400;
+  font-size: 13px;
   border-radius: 5px;
+  border: none;
   cursor: pointer;
   width: 100px;
   font-size: 10px;
 }
 
 .ver-imagem-button:hover {
-  background-color: #797979;
+  background-color: #a37443;
+  color: white;
 }
 
 .menu {
@@ -130,7 +136,9 @@ input {
 .custom-close-button {
   font-size: 12px;
 }
-
+.swal2-close {
+  border-color: none !important;
+}
 @media (min-width: 660px) {
   .menu {
     display: grid;
@@ -152,7 +160,7 @@ input {
 }
 
 .logo img {
-  width: 356px;
+  width: 278px;
   margin: 0 auto;
   display: block;
   grid-column: 1 / 3;
@@ -166,7 +174,7 @@ input {
 
 .mains {
   grid-column: 1 / 2;
-  margin-top: -30px;
+  margin-top: 54px;
 }
 
 .mains-name {
@@ -188,11 +196,11 @@ input {
 .extras {
   color: var(--secondary);
   padding: 25px;
-  margin-top: -48px;
+  margin-top: 23px;
 }
 
 .extras + .extras {
-  margin-top: -48px;
+  margin-top: 23px;
 }
 
 @media (min-width: 660px) {
