feat: add styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -192,7 +192,10 @@ input {
 .aside {
   grid-column: 2 / 3;
 }
-
+.wine_btn {
+  display: flex;
+  flex-direction: column;
+}
 .extras {
   color: var(--secondary);
   padding: 25px;
@@ -220,7 +223,8 @@ input {
 
 .extras-name {
   flex-grow: 1;
-  margin-bottom: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .total {
